<resources>
    <string name="app_name">OSEDAX</string>
    <string name="facebook_app_id">633263621091066</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Welcome -->
    <string name="select_an_option">Please select an option.</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_with_my_account">Login with my account</string>

    <!-- Login -->
    <string name="email_address">E-MAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="recover_password">Recover password</string>
    <string name="login">Login</string>
    <string name="login_error">Wrong e-mail or password</string>

    <!-- Sign up -->
    <string name="sign_up_to_start_reading">Sign up to start reading.</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="nickname">NICKNAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="reepat_password">REPEAT PASSWORD</string>
    <string name="sign_up">Sign up</string>
    <string name="email_notifications">I want to receive an e-mail when\na new chapter is available.</string>
    <string name="please_verify_the_following">Please verify the following</string>
    <string name="user.email.unique">The e-mail address has been already registered</string>
    <string name="user.id.type">The user is not valid</string>
    <string name="user.email.not_blank">You must enter an e-mail address</string>
    <string name="user.email.type">You must enter a valid e-mail address</string>
    <string name="user.password.not_blank">You must enter a password</string>
    <string name="user.password.length_min">The password must have at least 8 characters</string>
    <string name="user.password.length_max">The password can\'t have more than 40 characters</string>
    <string name="user.first_name.not_blank">You must enter your first name</string>
    <string name="user.first_name.length_min">The first name must have at least 3 characters</string>
    <string name="user.first_name.length_max">The first name can\'t have more than 40 characters</string>
    <string name="user.last_name.not_blank">You must enter your last name</string>
    <string name="user.last_name.length_min">The last name must have at least 3 characters</string>
    <string name="user.last_name.length_max">The last name can\'t have more than 40 characters</string>
    <string name="by_signing_up_you_accept">By signing up, you agree to our</string>
    <string name="and_our">and our</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support_text">Have trouble signing up?</string>
    <string name="contact_us">Contact us</string>

    <!-- Recover password -->
    <string name="we_will_send_your_password">We will send your password to the e-mail associated with your account</string>
    <string name="the_password_was_sent">The password was sent to the specified e-mail address.</string>
    <string name="email_not_found">The specified e-mail address hasn\'t been registered yet.</string>
    <string name="ok">OK</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- main menu -->
    <string name="account">account</string>
    <string name="characters">characters</string>
    <string name="favorites">favorites</string>
    <string name="purchases">purchases</string>

    <!-- chapters menu -->
    <string name="chapters">chapters</string>
    <!-- intro -->
    <string name="start">Start</string>

    <!-- character select -->
    <string name="select_the">Select</string>
    <string name="first_character">first character.</string>
    <string name="second_character">second character.</string>
    <string name="third_character">third character.</string>
    <string name="previous">Previous</string>
    <string name="previous_character">Previous character</string>
    <string name="select_character">Select character</string>
    <string name="chapter_1_title">One</string>
    <string name="chapter_1_1">I closes his eyes and approaches the other side of the bed, next to RE’s body. She attempts to surround her waist, but as soon as he touches him, sinks into her, until feeling the firmness of the mattress under his body, as though she would have wanted to embrace something with no bones, cotton filled. BI stands up with a jump. His chest goes up and down violently as she breathes in an agitated way, gasping for air.
“RE...,” he babbles, watching him with an expression of terror.
She brings closer a shaking hand to her neck, touches it with his index finger and it sinks down again... it sinks into a fluffy, spongy interior. BI starts to sob. He puts his hand to his face, covering her mouth with strength. She denies with his head in a slow way, stunned. He watches RE with a blank stare, fixed on something transparent... A fine yarn, plastic, as the nylon thread that unites the beads of her bracelets. From the skin behind each ear, it shapes a straight line, extending to both sides of his neck. It is... it is a seam. BI closes his eyes in a gesture of pain. She goes away from the body with clumsy steps, walking to the nightstand. He takes the phone in a rapid way, dials the emergency number, and stays watching it on the screen with expressionless eyes. The thumb suspended in the air, in front of the call button. Then, her countenance contracts slowly, loading up of anger. She screams, throwing the phone with violence.
He walks through the carpeted room reaching the closet, rummages in one of the closet drawers and grabs a T-shirt. She unwraps it, finding a gun. She holds it with strength in one hand as begins to walk in circles with jittery steps. He gestures as if were talking to herself, running the back of the hand
over his forehead covered of sweat. Some seconds pass until she stops with dry tears over his face, sighing as she props the hands on her waist. Soothed, he nods with the head to give confidence to herself and grabs the phone that he had thrown to the floor. She searches among his contacts and calls to NU+8715.
“BI... what... what’s going on?” responds to him a tired voice, just waking up.
“They took her.”
“What...? To whom?”
“He is not here, they took her,” she repeats in a dry tone, emotionless.
“To whom? Whom have they taken?” Silence. “BI, respond me. Whom have they taken?”
“RE, he... she is not here.”
“How he is not there?”
“Please...” Her voice breaks. “Please, come.”
“Where are you? Are you at home?” Not getting an answer, she insists, “BI! Are you at home?”
“Yes...,” he barely manages to say it, cleaning a tear of the cheek.
“I’m coming. Hold on, I’m coming.”
NU hangs up the communication and BI stays keeping the phone over her ear, watching RE’s body with a blank stare. She puts the device in the

pocket of his jogging pants and walks towards her with cautious steps. He caresses him a hair tuft, watching her sweetly, almost melancholically. Then she lowers the eyes to her neck, where the tattoo of the fine stem of a flower grows up till reaching the side of his ear, expanding its rounded petals. A poppy. Now, split in two by a seam of transparent thread. BI takes his hand from RE’s hair, shaking it in the air as if it burned her. She passes her hand through her face, covering her mouth as his eyes redden. He drowns a scream. She walks towards the door and stops under the frame, hitting it with strength. He rests her forehead on his forearm, leaning on it. She turns the head towards RE and pulls it back at once, giving a hit to the wall once and again. Then he squeezes the gun with the hand and leaves the room, closing the door in a slam. Abandoned, RE’s body is still lying in the middle of the narrow room. His hands clinging to the sheets as if she were bundling up from the cold, with a calm countenance, dreaming deeply.
    </string>

    <!-- read -->
    <string name="purchase_now">Purchase now</string>
    <string name="in_order_to_read">Purchase the full chapter in order to remove ads, or slide down to continue reading.</string>
    <string name="in_order_to_read_end">Purchase the full chapter in order to remove ads.</string>
    <string name="clipping_saved">The selected text was saved in favorites.</string>

    <!-- clippings -->
    <string name="clippings_empty">You don\'t have text favorites yet. Select a fragment in any part of the text and touch the Save button. You will be able to find the favorites that you save here.</string>

    <!-- Profile -->
    <string name="edit_your_profile_details">Edit your profile details.</string>
    <string name="save">Save</string>

    <!-- Restore purchases -->
    <string name="restore_purchases">Restore purchases</string>
    <string name="restore_purchases_description">If you have already purchased content with your account, and you can\'t access all of the chapters you purchased, click on the Restore purchases button in order to download the missing episodes.</string>
    <string name="purchases_restored">Purchases restored succesfully</string>

    <!-- Purchase screen -->
    <string name="read_free">Read Free</string>
    <string name="remove_ads">Remove ads</string>
    <string name="choose_your_reading_options">Choose your reading options</string>
    <string name="try_the_free_version">Try the free versiopn or purchase the chapter in order to remove ads</string>

    <!-- Purchase chapter screen -->
    <string name="keep_reading">Keep reading the free version or purchase the chapter to remove ads</string>
    <string name="continue_">Continue</string>

</resources>
