<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"

    >

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the"
            style="@style/TextCharacter"
            />
        <TextView
            android:id="@+id/characterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/first_character"
            style="@style/TextCharacterBold"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        />

    <ImageButton
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_left_button"
        style="@style/AppTheme.Widget.ImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="112dp"
        />

    <ImageButton
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_right_button"
        style="@style/AppTheme.Widget.ImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="112dp"
        />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/arrowLayout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutDescription="@xml/scene04"
        >

        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        style="@style/AppTheme.Widget.ButtonMini"
        android:text="@string/previous_character"
        android:drawableStart="@drawable/ic_back"
        android:minWidth="100dp"
        android:textSize="11sp"
        android:drawablePadding="4dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAllCaps="false"
        android:paddingStart="8dp"
        android:visibility="gone"
        tools:visibility="visible"

        />

    <Button
        android:id="@+id/selectCharacterButton"
        android:layout_width="wrap_content"
        android:width="120dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        style="@style/AppTheme.Widget.ButtonMiniNoTint"
        android:text="@string/select_character"
        android:minWidth="100dp"
        android:textSize="11sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/ic_check_off"
        android:drawablePadding="4dp"
        />







</androidx.constraintlayout.widget.ConstraintLayout>